# pymarxan

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: TUTORIAL.md  USER_MANUAL.md  VALIDATION.md
docs/plans/: 2026-02-21-marxan-shiny-python-design.md  2026-02-21-phase1-implementation.md  2026-02-21-phase2-implementation.md  2026-02-21-phase3-implementation.md  2026-02-21-phase4-implementation.md  2026-02-21-phase5-implementation.md  2026-02-21-phase6-implementation.md  2026-02-22-phase10-finish-design-doc-design.md  2026-02-22-phase10-implementation.md  2026-02-22-phase11-ci-coverage-design.md  2026-02-22-phase11-implementation.md  2026-02-22-phase12-docs-publishing-design.md  2026-02-22-phase12-implementation.md  2026-02-22-phase13-implementation.md  2026-02-22-phase13-ipyleaflet-maps-design.md  2026-02-22-phase7-implementation.md  2026-02-22-phase7-performance-design.md  2026-02-22-phase8-implementation.md  2026-02-22-phase8-solver-ux-design.md  2026-02-22-phase9-implementation.md  2026-02-22-phase9-shiny-modules-design.md  2026-02-23-codebase-review-design.md  2026-02-23-codebase-review-implementation.md  2026-02-23-codebase-review2-design.md  2026-02-23-codebase-review2-implementation.md  2026-02-23-codebase-review3-design.md  2026-02-23-codebase-review3-implementation.md  2026-02-23-codebase-review4-design.md  2026-02-23-codebase-review4-implementation.md  2026-02-23-codebase-review5-design.md  2026-02-23-codebase-review5-implementation.md  2026-02-23-codebase-review6-design.md  2026-02-23-codebase-review6-implementation.md  2026-02-23-mapp-porting-design.md  2026-02-23-phase14-implementation.md  2026-02-23-phase15-implementation.md  2026-02-23-phase16-implementation.md  2026-02-23-phase17-implementation.md  2026-05-16-phase18-design.md  2026-05-16-phase18-implementation.md  (+67 more)
examples/: README.md  baltic_marine_planning.py  validate_marxan_parity.py
paper/: paper.bib  paper.md
scripts/: make_rivers_figures.py  release.sh
src/pymarxan/: __init__.py  targets.py
src/pymarxan_app/: __init__.py  app.py
src/pymarxan_shiny/: app.py
tests/: conftest.py  test_app_rivers.py  test_e2e_marxan_formats.py  test_examples.py  test_integration.py  test_integration_phase10.py  test_integration_phase13.py  test_integration_phase2.py  test_integration_phase3.py  test_integration_phase4.py  test_integration_phase5.py  test_integration_phase6.py  test_integration_phase8.py  test_integration_phase9.py  test_optimizations.py  test_release_script.py  test_tutorial_examples.py
tests/benchmarks/: bench_clump.py  bench_prob.py  bench_sa.py  bench_sep.py  bench_zone_sa.py  conftest.py
tests/integration/: test_phase18_smoke.py  test_phase19_smoke.py  test_phase20_smoke.py  test_solver_capability_matrix.py
tests/pymarxan/: test_targets.py
tests/pymarxan_shiny/: test_blm_explorer.py  test_clumping_ui.py  test_comparison_map.py  test_connectivity_metrics_dashboard.py  test_connectivity_module.py  test_convergence.py  test_cost_upload.py  test_directory_browser.py  test_export.py  test_feature_table.py  test_frequency_map.py  test_gadm_picker.py  test_grid_builder.py  test_grid_builder_none.py  test_import_wizard.py  test_map_utils.py  test_matrix_input.py  test_network_edge_cap.py  test_network_view.py  test_probmode3_ui.py  test_progress.py  test_representation_module.py  test_rivers_panel.py  test_run_panel.py  test_scenario_module.py  test_sensitivity_ui.py  test_separation_ui.py  test_solution_map.py  test_solver_picker_mip.py  test_solver_picker_types.py  test_spatial_grid.py  test_spf_module.py  test_summary_table.py  test_sweep_module.py  test_target_met_module.py  test_upload.py  test_wdpa_overlay.py  (+2 more)
(+304 files in other folders)
