[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymarxan"
version = "1.0.0"
description = "Modular Python toolkit for Marxan conservation planning"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "pymarxan contributors"}]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "geopandas>=0.14",
    "shapely>=2.0",
    "scipy>=1.11",
    "PuLP>=2.7",
]

[project.optional-dependencies]
shiny = [
    "shiny>=1.0",
    "shinywidgets>=0.3",
    "ipyleaflet>=0.18",
    "plotly>=5.18",
    "matplotlib>=3.8",
    "networkx>=3.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "pandas-stubs",
    "types-requests",
    "pdoc>=16.0",
]
spatial = ["rasterio>=1.3", "requests>=2.28"]
all = ["pymarxan[shiny,dev,spatial]"]

[tool.hatch.build.targets.wheel]
packages = ["src/pymarxan", "src/pymarxan_shiny", "src/pymarxan_app"]

[project.urls]
Repository = "https://github.com/pymarxan/pymarxan"
Documentation = "https://github.com/pymarxan/pymarxan"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "bench_*.py"]
markers = [
    "slow: marks tests as slow (SA-heavy, zone solver, run_mode pipelines)",
    "integration: marks phase integration tests",
    "spatial: marks tests requiring geopandas/spatial features",
]

[tool.ruff]
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# pymarxan_shiny/app.py performs a sys.path adjustment before importing
# every module-level submodule; E402 doesn't apply.
"src/pymarxan_shiny/app.py" = ["E402"]
# help_content.py is purely user-facing help strings; arbitrary wrapping
# of long sentences makes the source harder to maintain than the gain
# from staying under 99 chars.
"src/pymarxan_shiny/modules/help/help_content.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["src"]
omit = ["src/pymarxan_app/*"]

[tool.coverage.report]
fail_under = 75
show_missing = true
exclude_lines = [
    "if __name__",
    "pragma: no cover",
    "raise NotImplementedError",
    "if _HAS_IPYLEAFLET",
    "if not _HAS_IPYLEAFLET",
    "except ImportError",
]
